task - ledger: small fixes to remove uneused/duplicated data
